# SDL2_example

./: .gitignore  CMakeLists.txt  cmake-kits.json  reference.txt
src/: main.cpp
